
Mon, Jun 16
-Added slideshow to Hardware projects
-Re-named div's to give more clarity as to what they contain