@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="css/header.css"> 
 <link rel="stylesheet" href="css/footer.css"> 
 <link rel="stylesheet" href="css/main.css"> 
+<link rel="stylesheet" href="css/about.css">
 
 
 
@@ -30,7 +31,7 @@ div{
       <a href="index.html" class="home"> 
           Home
       </a>
-      <a class="about">
+      <a href="about.html" class="about">
           About
       </a>
       
@@ -71,15 +72,36 @@ div{
 
 <div class="horizontal-body">
 
-  <div class="section-1">
-      <h1>Hi I'm <em>Jack</em></h1>
-      <h4>2nd year Computer Engineering student at Waterloo</h2>
-      <h5>Welcome to my website</h3>
+  <div class="page-title">
+      <h1>About This Website</h1>
+
 
 
   </div>
 
-  <div class="section-2">
+  <div class="content">
+
+    <div class="hardware">
+
+      <div class="description">
+      <h1>Hardware</h1>
+
+      <p>
+        This server is currently being hosted on a Dell PowerEdge T420 with:
+        <ul>
+          <li>64Gb of ECC RAM</li>
+          <li>2x Xeon E5-2420 @ 1.90GHz</li>
+        </ul>
+      </p>
+      </div>
+
+
+      <div class="img">      
+        <img src="/proj_Images/t420.jpg">
+      </div>
+
+
+    </div>
 
 
   </div>
