@@ -31,7 +31,7 @@ div{
       <a href="index.html" class="home"> 
           Home
       </a>
-      <a class="about">
+      <a href="about.html" class="about">
           About
       </a>
       
@@ -117,8 +117,11 @@ div{
                 </li>
               </ul>
             </div>
-
-              <h2>External Resources</h2>
+              
+              <div class="subtitle">
+                 <h2>External Resources</h2>
+              </div>
+             
 
               <div class="refs">
               <a href="https://youtube.com/playlist?list=PLowKtXNTBypFbtuVMUVXNR0z1mu7dp7eH&si=-x86MyVejjAb9HX_">Ben Eater's Video Series</a>
@@ -138,6 +141,12 @@ div{
         </div>
 
   </div>
+
+
+
+
+  
+  
 
 
 </div>
