@@ -30,7 +30,7 @@ div{
       <a href="index.html" class="home"> 
           Home
       </a>
-      <a class="about">
+      <a href="about.html" class="about">
           About
       </a>
       
@@ -74,7 +74,8 @@ div{
   <div class="section-1">
       <h1>Hi I'm <em>Jack</em></h1>
       <h4>2nd year Computer Engineering student at Waterloo</h2>
-      <h5>Welcome to my website</h3>
+      <h4>Welcome to my website</h4>
+
 
 
   </div>
